--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -783,7 +783,7 @@ if {[catch {
             -a - --append - -append - --all - -p - --prepend - -prepend -\
             --delim - -delim - --delim=* - -delim=* - --duplicates - --index\
             - --notuasked - --indepth - --no-indepth - --dump-state -\
-            --reset - --tag - --tag=* {
+            --reset - --tag - --tag=* - --glob {
                # command-specific switches interpreted later on
                lappend otherargv $arg
             }
