--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -1718,7 +1718,7 @@ proc remove-path-un {args} {
 proc edit-path-wh {cmd args} {
    # get variable name
    lassign [parsePathCommandArgs $cmd load noop {*}$args] separator allow_dup\
-      idx_val ign_refcount bhv var path_list
+      idx_val ign_refcount glob_match bhv var path_list
 
    if {![info exists ::env($var)]} {
       set ::env($var) {}
