--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -2001,33 +2001,19 @@ Options:
 # create appropriate message and kind of report when a requirement is not
 # satisfied
 proc reportMissingPrereqError {curmodnamevr args} {
-   set retisreqlo [isModuleEvaluated reqlo $curmodnamevr {*}$args]
-   # report message on currently evaluated module message block
-   if {![set retiseval [isModuleEvaluated any $curmodnamevr {*}$args]] ||\
-      [currentState msgrecordid] ne [topState msgrecordid] || !$retisreqlo} {
-
+   if {[isModuleEvaluated reqlo $curmodnamevr {*}$args]} {
+      set msg [getErrReqLoMsg $args]
+   } else {
+      set retiseval [isModuleEvaluated any $curmodnamevr {*}$args]
       # more appropriate msg if an evaluation was attempted or is by-passed
       set msg [expr {$retiseval || [getState force] ? [getReqNotLoadedMsg\
          $args] : [getErrPrereqMsg $args]}]
-      # still proceed if force mode enabled
-      if {[getState force]} {
-         reportWarning $msg
-      # no error raise if done later
-      } elseif {$retisreqlo} {
-         reportError $msg
-      } else {
-         knerror $msg MODULES_ERR_GLOBAL
-      }
    }
-
-   # raise reqlo-specific msg to top level if attempted
-   if {$retisreqlo} {
-      set msg [getErrReqLoMsg $args]
-      if {[getState force]} {
-         reportWarning $msg 1
-      } else {
-         knerror $msg MODULES_ERR_GLOBALTOP
-      }
+   # still proceed if force mode enabled
+   if {[getState force]} {
+      reportWarning $msg
+   } else {
+      knerror $msg MODULES_ERR_GLOBAL
    }
 }
 
