Hold error count raise when report is held
Update held report mechanism to also hold error count to raise when
activated. With this change no more error is rendered when a requirement
cannot be loaded but an alternative one can.

Fixes #510

--- a/tcl/envmngt.tcl.in
+++ b/tcl/envmngt.tcl.in
@@ -21,7 +21,13 @@
 ##########################################################################
 
 proc raiseErrorCount {} {
-   setState error_count [expr {[getState error_count] + 1}]
+   # hold error count raise
+   if {[depthState reportholdid] > 0} {
+      lappend ::g_holdReport([currentState reportholdid]) [list\
+         raiseErrorCount]
+   } else {
+      setState error_count [expr {[getState error_count] + 1}]
+   }
 }
 
 proc renderFalse {} {
