Add isEnvVarDefined helper procedure
Define new procedure and update existing code to use it to check if an
environment variable is defined. Add this new procedure to the list of
those excluded from the trace debug mechanism.

--- a/tcl/coll.tcl.in
+++ b/tcl/coll.tcl.in
@@ -116,7 +116,7 @@ proc findCollections {{coll *} {search glob} {swap_by_init 0} {errnomatch 0}\
       # collection is specified as a filepath
       set collfile $coll
    # elsewhere collection is a name
-   } elseif {[info exists ::env(HOME)]} {
+   } elseif {[isEnvVarDefined HOME]} {
       set collfile $::env(HOME)/.module/$coll
       # find saved collections (matching target suffix). a target is a domain
       # on which a collection is only valid. when a target is set, only the
