--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -685,7 +685,7 @@ proc initErrorReport {} {
             initProcReportTrace isVerbosityLevel reportSeparateNextContent\
             getState setState unsetState lappendState lpopState currentState\
             depthState isStateDefined isStateEqual sgr getConf setConf\
-            unsetConf lappendConf getCallingProcName]
+            unsetConf lappendConf getCallingProcName isEnvVarDefined]
 
          foreach prc [info procs] {
             if {$prc ni $excl_prc_list} {
@@ -1790,7 +1790,7 @@ proc displayConfig {val env_var {asked 0} {trans {}} {locked 0}} {
    # get overridden value and know what has overridden it
    if {$asked} {
       set defby " (cmd-line)"
-   } elseif {$env_var ne {} && !$locked && [info exists ::env($env_var)]} {
+   } elseif {$env_var ne {} && !$locked && [isEnvVarDefined $env_var]} {
       set defby " (env-var)"
    } elseif {$locked} {
       set defby " (locked)"
