Add envVarEquals helper procedure
Test environment variable is defined and equals given value. Add this
procedure to the list of those excluded from trace debug mechanism.

--- a/tcl/envmngt.tcl.in
+++ b/tcl/envmngt.tcl.in
@@ -1222,6 +1222,11 @@ proc get-env {var {valifunset {}}} {
    }
 }
 
+proc envVarEquals {var_name value} {
+   return [expr {[isEnvVarDefined $var_name] && [get-env $var_name]\
+      eq $value}]
+}
+
 proc isEnvVarDefined {var_name} {
    return [info exists ::env($var_name)]
 }
