--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -583,13 +583,13 @@ proc initConfColor {envvar value validvallist intvallist} {
    if {[isEnvVarDefined NO_COLOR]} {
       set value never
    } elseif {[isEnvVarDefined CLICOLOR]} {
-      if {$::env(CLICOLOR) eq {0}} {
+      if {[envVarEquals CLICOLOR 0]} {
          set value never
       } else {
          set value auto
       }
-   } elseif {[isEnvVarDefined CLICOLOR_FORCE] && $::env(CLICOLOR_FORCE)\
-      ne {0}} {
+   } elseif {[isEnvVarDefined CLICOLOR_FORCE] && $::env(CLICOLOR_FORCE) ne\
+      {0}} {
       set value always
    }
 
