--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -2863,8 +2863,7 @@ proc pushenv-un {var val} {
          set popval [string range [lindex $pushlist 0] $validx end]
 
          # restore top value if different from current one
-         # env array is used instead of get-env to know if envvar is undefined
-         if {![isEnvVarDefined $var] || $::env($var) ne $popval} {
+         if {![envVarEquals $var $popval]} {
             set-env $var $popval
          }
 
