--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -685,7 +685,8 @@ proc initErrorReport {} {
             initProcReportTrace isVerbosityLevel reportSeparateNextContent\
             getState setState unsetState lappendState lpopState currentState\
             depthState isStateDefined isStateEqual sgr getConf setConf\
-            unsetConf lappendConf getCallingProcName isEnvVarDefined]
+            unsetConf lappendConf getCallingProcName isEnvVarDefined\
+            envVarEquals]
 
          foreach prc [info procs] {
             if {$prc ni $excl_prc_list} {
