--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2093,7 +2093,7 @@ proc cmdModuleUnuse {mode args} {
 
 proc cmdModuleAutoinit {} {
    # skip autoinit process if found already ongoing in current environment
-   if {[get-env __MODULES_AUTOINIT_INPROGRESS] eq {1}} {
+   if {[envVarEquals __MODULES_AUTOINIT_INPROGRESS 1]} {
       return
    }
 
@@ -2211,7 +2211,7 @@ proc cmdModuleAutoinit {} {
       @setmanpath@   if {![isEnvVarDefined MANPATH]} {
       @setmanpath@      append-path MANPATH {}
       @setmanpath@   # ensure no duplicate ':' is set
-      @setmanpath@   } elseif {[get-env MANPATH] eq {:}} {
+      @setmanpath@   } elseif {[envVarEquals MANPATH :]} {
       @setmanpath@      remove-path MANPATH {}
       @setmanpath@      append-path MANPATH {}
       @setmanpath@   }
