Add setEnvVarIfUndefined helper procedure

--- a/tcl/envmngt.tcl.in
+++ b/tcl/envmngt.tcl.in
@@ -1231,6 +1231,12 @@ proc isEnvVarDefined {var_name} {
    return [info exists ::env($var_name)]
 }
 
+proc setEnvVarIfUndefined {var_name value} {
+   if {![isEnvVarDefined $var_name]} {
+      set ::env($var_name) $value
+   }
+}
+
 proc isProtectedEnvVar {var} {
    # return if var is protected by protected_envvars config
    return [expr {$var in [split [getConf protected_envvars] :]}]
